# cloud-run-sandbox-adk-deep-dive

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
assets/: adk-agent-design.html  adk-test-plan.html  annotated-failing-tests.html  annotated-security-probe.html  annotated-tool-sequence.html  architecture.html  cost-breakdown.html  deep-dive-differentiation.html  full-review-results.html  latency-results.html  platform-decision-matrix.html
assets/evidence/: full-review.json  latency.json
docs/: benchmark-methodology.md  decision-matrix.md  threat-model.md  tutorial.md
infographic/cloud-run-adk/: analysis.md  source-cloud-run-adk.md  structured-content.md
infographic/cloud-run-adk/prompts/: infographic.md
samples/unsafe_rule_engine/: README.md  rule_engine.py  security_probe.py
samples/unsafe_rule_engine/tests/: test_rule_engine.py
sandbox_analyst/: __init__.py  agent.py  costs.py  executor.py  lifecycle.py  policy.py  tools.py
scripts/: auth_proxy.py  build_blog.py  capture_adk_web.py  cleanup.sh  cost_model.py  deploy.sh  generate_blog_visuals.py  generate_latency_visual.py  run_evidence.py  smoke_test.py
tests/: test_agent.py  test_costs.py  test_executor.py  test_lifecycle.py  test_policy.py
